<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    	
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="match_parent"></android.support.v4.view.ViewPager>
    
     <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_bg_title" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:padding="@dimen/view_padding"
            android:onClick="onBtnClick"
            android:clickable="true"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/btn_mode_light"
            android:gravity="center"
            android:text="@string/mode_light"
            style="@style/text_small"
        	android:textColor="@drawable/text_white2blue"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:padding="@dimen/view_padding"
            android:onClick="onBtnClick"
            android:clickable="true"
            android:visibility="gone"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/btn_mode_secne"
            android:text="@string/mode_scene"
              style="@style/text_small"
        	android:textColor="@drawable/text_white2blue" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:padding="@dimen/view_padding"
            android:onClick="onBtnClick"
            android:clickable="true"
            android:drawablePadding="2dp"
            android:text="@string/mode_setting"
             android:drawableTop="@drawable/btn_setting"
             style="@style/text_small"
        	android:textColor="@drawable/text_white2blue" />
        
    </LinearLayout>

</LinearLayout>
