<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical">


    <include layout="@layout/fragment_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/timing_enable"
            style="@style/text_normal"></TextView>

        <CheckBox
            android:id="@+id/checkBox_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/cb_green"
            android:button="@null"></CheckBox>

    </RelativeLayout>

    <include layout="@layout/fragment_line" />

    <LinearLayout
        android:id="@+id/layout_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector"
        android:gravity="center_vertical"
        android:onClick="onBtnClick"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/img_timing"
            android:focusable="false"></ImageView>

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/img_bg_layout_3"
            android:clickable="false"
            android:gravity="center_vertical|right"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            style="@style/text_small"></TextView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector2"
        android:onClick="onBtnClick"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/secne_setting"
            style="@style/text_small" />

        <TextView
            android:id="@+id/textView_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            style="@style/text_small"></TextView>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/view_padding"
        android:text="@string/brightness"
        style="@style/text_small"></TextView>

    <SeekBar
        android:id="@+id/seekBar_brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_padding"
        android:layout_marginRight="@dimen/view_padding"
        android:max="255"
        android:maxHeight="2dp"
        android:paddingLeft="@dimen/view_padding"
        android:paddingRight="@dimen/view_padding"
        android:progress="0"
        android:progressDrawable="@drawable/seekbar_white2blue"
        android:thumb="@drawable/img_thumb_yellow" />


    <TextView
        android:id="@+id/textView_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/view_padding"
        android:text="@string/color"
        style="@style/text_small"></TextView>

    <SeekBar
        android:id="@+id/seekBar_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_padding"
        android:layout_marginRight="@dimen/view_padding"
        android:max="255"
        android:maxHeight="2dp"
        android:paddingLeft="@dimen/view_padding"
        android:paddingRight="@dimen/view_padding"
        android:progress="0"
        android:progressDrawable="@drawable/seekbar_white2blue"
        android:thumb="@drawable/img_thumb_yellow" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"></View>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:onClick="onBtnClick"
        style="@style/btn_confirm"></Button>

</LinearLayout>
