<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:padding="20dp"
    android:orientation="vertical" >

    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:orientation="horizontal" >
        <Button 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            style="@style/text_normal"
            android:visibility="gone"
            android:background="@null"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:onClick="btn_back"
            android:text="@string/cancel"></Button>

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/label_time_setting"
            android:textColor="#606060"
            style="@style/text_big"
            android:textSize="20sp" >
        </TextView>
        
        
          <Button 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            style="@style/text_normal"
            android:background="@null"
            android:onClick="btn_confirm"
            android:visibility="gone"
              android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/confirm"></Button>
    </LinearLayout>
    
  
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center_vertical"
  >

    

    <View
        android:id="@+id/view_middle"
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >
    </View>

   
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >
        
         <LinearLayout
            android:id="@+id/layout_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
             android:visibility="gone"
            android:orientation="vertical" >
        </LinearLayout>
        
          <LinearLayout
            android:id="@+id/layout_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
              android:visibility="gone"
            android:orientation="vertical" >
        </LinearLayout>
         

        <LinearLayout
            android:id="@+id/layout_day"
           android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical" >
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_hour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_minute"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/button5"
            style="@style/btn_confirm"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/view_padding"
            android:onClick="btn_confirm"
            />
        
             <Button
            android:id="@+id/button4"
            style="@style/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/view_padding"
            android:onClick="btn_back"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>